--- a/complete/user/pom.xml
+++ b/complete/user/pom.xml
@@ -14,8 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-<!--    TODO: switch to correct version-->
-    <version>2.2.0.BUILD-SNAPSHOT</version>
+    <version>2.2.0.RC1</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -46,8 +45,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-            <!--      TODO: switch to M3 version-->
-          <version>Hoxton.BUILD-SNAPSHOT</version>
+          <version>Hoxton.M3</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
