Add milestone repositories.

--- a/initial/user/pom.xml
+++ b/initial/user/pom.xml
@@ -60,5 +60,27 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<!--  TODO: remove after switching to GA-->
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone-local</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+	<pluginRepository>
+		<id>spring-milestones</id>
+		<name>Spring Milestones</name>
+		<url>https://repo.spring.io/libs-milestone-local</url>
+		<snapshots>
+			<enabled>false</enabled>
+		</snapshots>
+	</pluginRepository>
+	</pluginRepositories>
 	
 </project>
