Add milestone repositories.

--- a/initial/say-hello/build.gradle
+++ b/initial/say-hello/build.gradle
@@ -4,6 +4,8 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		// TODO: remove after switching to GA
+		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
