Upgrade to Hoxton.RC2 and Boot 2.2.1.RELEASE.

--- a/complete/say-hello/build.gradle
+++ b/complete/say-hello/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.2.0.RC1'
+		springBootVersion = '2.2.1.RELEASE'
 	}
 	repositories {
 		mavenCentral()
