--- a/complete/user/pom.xml
+++ b/complete/user/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-dependencies</artifactId>
-          <version>Hoxton.RC2</version>
+          <version>Hoxton.RELEASE</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
