Upgrade to SC 2020.0.0 and Boot 2.4.1.

--- a/initial/say-hello/build.gradle
+++ b/initial/say-hello/build.gradle
@@ -1,11 +1,9 @@
 buildscript {
 	ext {
-		springBootVersion = '2.3.2.RELEASE'
+		springBootVersion = '2.4.1'
 	}
 	repositories {
 		mavenCentral()
-		// TODO: remove after switching to GA
-		maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
