--- a/complete/user/build.gradle
+++ b/complete/user/build.gradle
@@ -1,11 +1,9 @@
 buildscript {
   ext {
-    springBootVersion = '2.3.2.RELEASE'
+    springBootVersion = '2.4.1'
   }
   repositories {
     mavenCentral()
-    // TODO: remove after switching to GA
-    maven { url "https://repo.spring.io/milestone" }
   }
   dependencies {
     classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -26,8 +24,6 @@ targetCompatibility = 1.8
 
 repositories {
   mavenCentral()
-  // TODO: remove after switching to GA
-  maven { url "https://repo.spring.io/milestone" }
 }
 
 
@@ -39,7 +35,7 @@ dependencies {
 
 dependencyManagement {
   imports {
-    mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE"
+    mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.0"
   }
 }
 
